kubernetes/argo-cd/projects/aws/production-hm/clickhouse/environments/production/kubernetes-manifests/hm-clickhouse-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-clickhouse-ingress
  namespace: production-hm-clickhouse
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: clickhouse.hongbomiao.com
  labels:
    app.kubernetes.io/name: clickhouse
    app.kubernetes.io/part-of: production-hm-clickhouse
spec:
  rules:
    - host: clickhouse.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-clickhouse
                port:
                  number: 8123
  tls:
    - hosts:
        - clickhouse.hongbomiao.com
      secretName: hm-clickhouse-certificate
